syntax = "proto3";
import "CommonMessages.proto";
package it.unibo.alchemist.proto;

message SimulationConfiguration {
  int64 endStep = 1;
  double endTime = 2;
  map<string, bytes> dependencies = 3;
}

message Simulation {
  string simulationID = 1;
  bytes environment = 2;
  bytes exports = 3;
}

message RunSimulation {
  string jobID = 1;
}

enum SimulationEventType {
  COMPLETED = 0;
  CANCELLED = 1;
  ERROR = 2;
}

enum Status {
  DISPATCHED = 0;
  RUNNING = 1;
  DONE = 2;
  FAILED = 3;
}

message SimulationStatus {
  string serverID = 1;
  Status status = 2;
}

message SimulationEvent {
  string jobID = 1;
  SimulationEventType type = 2;
}

message Assignment {
  string simulationID = 1;
  string jobID = 2;
  string serverID = 3;
}
